# cardano-node-antithesis

./: .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  HANDOFF-AMARU-BOOTSTRAP-PRODUCER.md  README.md  flake.nix  gate.sh  index.html  justfile  mkdocs.yml  sitemap.xml
.github/workflows/: adversary-CI.yaml  build-docs.yaml  cardano-node.yaml  deploy-docs.yaml  pr-preview.yaml  publish-images.yaml  smoke-test.yaml  tracer-sidecar-CI.yaml
.specify/memory/: constitution.md
assets/css/: styles.c14ec98d.css
assets/js/: 17896441.f9bf972f.js  1db64337.ed6f5cf7.js  1df93b7f.be0069c9.js  1f391b9e.e2579f16.js  3042.3248a95b.js  393be207.1f6e8309.js  6319.dd18b93b.js  7592.c180f122.js  a94703ab.5a29baa0.js  common.06b33dcb.js  common.09fc1d72.js  common.09fc1d72.js.LICENSE.txt  e081a5dd.7c5f6517.js  main.410dea5f.js  main.911da21c.js  runtime~main.0a807fe4.js  runtime~main.172f4780.js
components/: Makefile
components/adversary/: Dockerfile  README.md  adversary.cabal  cabal.project  flake.nix  generate-delegate-tx.sh  index.html  justfile  points.json
components/adversary-roadmap/: index.html
components/adversary/app/: Main.hs
components/adversary/composer/chain-sync-client/: eventually_adversary_active.sh  finally_adversary_summary.sh  parallel_driver_flaky_chain_sync.sh  parallel_driver_flap.sh
components/adversary/nix/: docker-image.nix  project.nix
components/adversary/src/: Adversary.hs
components/adversary/src/Adversary/: Application.hs  FetchPeers.hs  Run.hs  SDK.hs  SubmitTransactions.hs
components/adversary/src/Adversary/ChainSync/: Codec.hs  Connection.hs
components/adversary/src/Adversary/FetchPeers/: Client.hs  Database.hs  Log.hs  PeerList.hs
components/adversary/src/Adversary/SubmitTransactions/: Client.hs  Log.hs  PollFiles.hs  Util.hs
components/adversary/test/: AdversarySpec.hs
components/adversary/test/Adversary/: RunSpec.hs  SubmitTransactionsSpec.hs
components/adversary/test/Adversary/FetchPeers/: DatabaseSpec.hs
components/amaru-prober/: amaru-prober.sh  flake.nix
components/asteria-game/: asteria-game.cabal  cabal.project  flake.nix  justfile
components/asteria-game/aiken/: apply-params.sh  plutus-applied.json  plutus.json
components/asteria-game/aiken/validators/: admin_mint.ak
components/asteria-game/app/: BootstrapMain.hs  InvariantMain.hs  PlayerMain.hs
components/asteria-game/composer/asteria-game/: anytime_asteria_admin_singleton.sh  eventually_alive.sh  eventually_asteria_consistency.sh  finally_alive.sh  finally_asteria_consistency.sh  helper_sdk.sh  parallel_driver_asteria_player.sh  parallel_driver_heartbeat.sh  serial_driver_asteria_bootstrap.sh
components/asteria-game/composer/stub/: anytime_asteria_admin_singleton.sh  eventually_alive.sh  finally_alive.sh  finally_asteria_consistency.sh  helper_sdk.sh  parallel_driver_asteria_player.sh  parallel_driver_heartbeat.sh  serial_driver_asteria_bootstrap.sh
components/asteria-game/nix/: docker-image.nix  project.nix
components/asteria-game/src/Asteria/: Deploy.hs  Game.hs  Provider.hs  Sdk.hs  Validators.hs  Wallet.hs
components/asteria-player/: asteria-player.cabal  cabal.project  flake.nix  index.html  justfile
components/asteria-player/aiken/: apply-params.sh  plutus-applied.json  plutus.json
components/asteria-player/app/: BootstrapMain.hs  PlayerMain.hs
components/asteria-player/composer/asteria/: eventually_asteria_alive.sh  parallel_driver_asteria_bootstrap.sh  parallel_driver_asteria_player.sh
components/asteria-player/nix/: docker-image.nix  project.nix
components/asteria-player/src/Asteria/: Crypto.hs  Datums.hs  Game.hs  Provider.hs  RandomSource.hs  Validators.hs
components/asteria-stub/: Dockerfile  flake.nix  stub.sh
components/composer-sdk/: helper_sdk_common.sh
components/config/: index.html
components/configurator/: Dockerfile  configurator.sh  index.html
components/gov-cli/: INSTRUMENTATION.md  README.md  sleep.sh
components/gov-configurator/: Dockerfile  generate.sh
components/kupo/: Dockerfile
components/log-tailer/: Dockerfile
components/n2c-harness/: harness.sh
components/ogmios/: Dockerfile
components/sidecar/: flake.nix  index.html  justfile  sidecar.sh
components/tracer/: index.html  tracer-config.yaml
components/tracer-sidecar/: Dockerfile  flake.nix  index.html  justfile  tracer-sidecar.cabal
components/tracer-sidecar/nix/: docker-image.nix  project.nix
components/tracer-sidecar/src/: App.hs
components/tracer-sidecar/src/Cardano/Antithesis/: ForkTree.hs  LogMessage.hs  Sdk.hs  Sidecar.hs
components/tracer-sidecar/test/: ForkTreeSpec.hs  Spec.hs
components/tracer-sidecar/test/data/: output.jsonl
components/tx-generator/: Dockerfile  entrypoint.sh  flake.nix  index.html  tx_generator.py
contributing/: index.html
docs/: docusaurus.config.ts  index.md  sidebars.ts  triage.md
docs/components/: adversary-roadmap.md  adversary.md  asteria-player.md  configurator.md  tracer-sidecar.md  tx-generator.md
docs/docs/: overview.md
docs/js/: mermaid-init.js
docs/overview/: index.html
docs/testnets/: cardano-amaru.md  cardano-node-dijkstra.md  cardano-node-master.md  cardano-node-tx-generator.md  index.md
markdown-page/: index.html
overview/: index.html
query-logs/: index.html
scripts/: agent-browser-nixos.sh  push-asteria_game_images.sh  push-cardano_node_master_images.sh  smoke-test.sh
search/: search_index.json
specs/003-indexer-read-side/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/004-yaci-store/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/079-convergence-command-diagnostics/: plan.md  spec.md  tasks.md
specs/080-amaru-self-bootstrap/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/179-amaru-consumer/: plan.md  spec.md  tasks.md
specs/180-consumer-convergence-property/: plan.md  spec.md  tasks.md
specs/phase1-asteria-gatherer/: spec.md
testnets/: index.html
testnets/asteria_game/: README.md  docker-compose.yaml  no-op-finally.sh  tx-generator.disabled.yaml
triage/: index.html
(+99 files in other folders)
