cabal-version:   3.0
name:            adversary
version:         0.1.0.0
license:         Apache-2.0
license-file:    LICENSE
author:          HAL team
maintainer:      hal@cardano-foundation.org
category:        Testing
build-type:      Simple
extra-doc-files: CHANGELOG.md

common settings
  ghc-options:
    -Wall -Wunused-imports -Wunused-packages -Wname-shadowing
    -Wdeferred-out-of-scope-variables -Wpartial-type-signatures
    -Wredundant-constraints

  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:          settings
  hs-source-dirs:  src
  build-depends:
    , aeson
    , async
    , base
    , base16-bytestring
    , bytestring
    , cardano-ledger-alonzo
    , cardano-ledger-core
    , cardano-ledger-byron
    , contra-tracer
    , network
    , network-mux
    , ouroboros-consensus
    , ouroboros-consensus-cardano   ^>=0.25
    , ouroboros-consensus-protocol
    , ouroboros-network
    , ouroboros-network-api
    , ouroboros-network-framework
    , ouroboros-network-mock
    , ouroboros-network-protocols
    , random
    , serialise
    , strict-stm
    , text
    , typed-protocols

  exposed-modules:
    Adversary
    Adversary.Application
    Adversary.ChainSync.Codec
    Adversary.ChainSync.Connection
    Adversary.Run
    Adversary.SubmitTransactions

  other-modules:

executable adversary
  import:         settings
  main-is:        Main.hs
  build-depends:
    , adversary
    , base

  hs-source-dirs: app

test-suite adversary-test
  import:             settings
  other-modules:      AdversarySpec
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  build-depends:
    , adversary
    , aeson
    , base
    , hspec
    , QuickCheck
    , random

  build-tool-depends: hspec-discover:hspec-discover
  other-modules:
    Adversary.RunSpec
