cabal-version:   3.0
name:            adversary
version:         0.1.0.0
license:         Apache-2.0
license-file:    LICENSE
author:          HAL team
maintainer:      hal@cardano-foundation.org
category:        Testing
build-type:      Simple
extra-doc-files: CHANGELOG.md

common settings
  ghc-options:
    -Wall -Wunused-imports -Wunused-packages -Wname-shadowing
    -Wdeferred-out-of-scope-variables -Wpartial-type-signatures
    -Wredundant-constraints

  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:          settings
  hs-source-dirs:  src
  build-depends:
    , aeson
    , async
    , base
    , base16-bytestring
    , bytestring
    , cardano-diffusion:api            ^>=1.0
    , cardano-ledger-byron
    , cardano-node-clients
    , contra-tracer
    , directory
    , filepath
    , io-classes                       ^>=1.8
    , io-classes:strict-stm
    , network
    , network-mux
    , ouroboros-consensus              >=3.0.1 && <3.1
    , ouroboros-consensus:cardano
    , ouroboros-consensus:protocol
    , ouroboros-network:api            ^>=1.1
    , ouroboros-network:api-tests-lib
    , ouroboros-network:framework
    , ouroboros-network:protocols
    , random
    , serialise
    , text
    , typed-protocols                  ^>=1.2
    , typed-protocols:cborg

  exposed-modules:
    Adversary
    Adversary.SDK

  other-modules:

executable cardano-adversary
  import:         settings
  main-is:        Main.hs
  build-depends:
    , adversary
    , aeson
    , base
    , cardano-node-clients
    , network
    , optparse-applicative
    , ouroboros-network:api  ^>=1.1
    , random
    , text
    , time

  hs-source-dirs: app

test-suite adversary-test
  import:             settings
  other-modules:      AdversarySpec
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  build-depends:
    , adversary
    , base
    , cardano-node-clients
    , hspec
    , QuickCheck
    , random

  build-tool-depends: hspec-discover:hspec-discover
